--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "9.0.1",
+    "bcrypt": "6.0.0”,
+    "
     "socket.io": "^4.7.2"
   }
 }
